name:                li

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0-revision173

-- A short (one-line) description of the package.
synopsis:            R7RS

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            http://www.fogus.me/fun/li

-- The license under which the package is released.
license:             GPL-2

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Fogus

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          me@fogus.me

-- A copyright notice.
-- copyright:           

category:            Language

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8


executable li
  -- .hs or .lhs file containing the Main module.
  -- main-is:             
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base ==4.5.*, mtl ==2.1.*, array ==0.4.*, parsec ==3.1.*
  
  -- Directories containing source files.
  hs-source-dirs:  src
  Extensions:      ExistentialQuantification
  Main-is:         Main.hs
  